Updated tesi: index and sections

--- a/tesi.tex
+++ b/tesi.tex
@@ -34,7 +34,23 @@ sismico ad Ischia mediante l'utilizzo
 della Web App XeRiS}
 \maketitle
 \tableofcontents
+\clearpage
 
+\section{Introduzione}
 
+\section{Presentazione della Web App XeRiS}
+\subsection{Definizione del modello strutturale}
+\subsection{Modellizzazione di sorgenti sismiche estese}
+\subsection{Modellazione del moto del suolo generato da sorgenti sismiche
+estese}
+\subsection{Parametri di scuotimento del suolo}
+\subsection{Test parametrici}
+
+\section{Simulazione di eventi di scenario}
+\subsection{Simulazione del terremoto a Ischia: Faglia di Casamicciola}
+\subsection{ Simulazione di eventi di scenario ad Ischia per sorgenti appenniniche}
+\subsection{Confronto tra alcune simulazioni con sorgente appenninica}
+
+\section*{Conclusioni}\addcontentsline{toc}{section}{Conclusioni}
 
 \end{document}
