Updated tesi: introduction text

--- a/tesi.tex
+++ b/tesi.tex
@@ -38,6 +38,41 @@ della Web App XeRiS}
 
 \section{Introduzione}
 
+L'Italia è un'area ad elevata sismicità caratterizzata dalla presenza di numerose faglie sismicamente attive, situate nella litosfera a profondità relativamente               modeste. Si stima che nel passato esse abbiano provocato eventi 
+sismici di magnitudo anche superiore a 7.0, come ad esempio il terremoto
+calabro-siculo del 1908, che danneggiò gravemente le città di Reggio Calabria e Messina provocando più di novantamila morti.\\
+La mappa italiana di pericolosità sismica (PCM 28 aprile 2006) segnala ampie porzioni del territorio nazionale su cui può incidere un importante fattore di rischio.
+
+La pericolosità sismica è associata agli effetti fisici di un sisma che possono rivelarsi potenzialmente dannosi per l'uomo e/o le sue attività, come ad
+esempio il massimo scuotimento orizzontale del suolo, solitamente espresso in PGA (Peak Ground Acceleration). Il rischio sismico, in sintesi, rappresenta
+la probabilità che l'uomo, e/o le sue attività, subiscano un livello di danno se esposti a pericolosità sismica; viene valutato in concomitanza dei fattori di
+pericolo, vulnerabilità ed esposizione. La vulnerabilità sismica indica la predisposizione di una costruzione a subire un determinato danno se soggetta a
+un evento sismico di data entità, mentre l'esposizione descrive l'abbondanza di beni esposti al pericolo (e.g. vite umane, edifci e opere d'arte).\\
+I livelli di scuotimento del suolo sono determinati principalmente dai seguenti fattori:\\
+
+\begin{itemize}
+\item  La magnitudo: indica la quantità di energia sismica rilasciata dal terremoto, ed è espressa in forma logaritmica. Tra un'unità di magnitudo e la
+successiva corrispondono differenze energetiche circa di trentadue volte.
+\item  La distanza epicentrale: si misura tra il sito in cui sono valutati gli effetti del sisma, e la porzione di litosfera dalla quale ha origine la rottura da cui si propagano le onde sismiche.
+\item  Il processo di rottura: determina la direttività della rottura sul piano di faglia incidendo anche sulle caratteristiche del segnale sismico, percepito al sito.
+\item  Le proprietà del mezzo attraversato dalle onde sismiche: gioca un ruolo fondamentale determinando i fattori di amplificazione e di decadimento
+dei fronti d'onda.
+\end{itemize}
+
+Al fine di prevedere possibili scenari sismici può essere condivisibile l'idea di usare degli strumenti che permettano la simulazione di eventi sismici
+realistici, basati su dati debitamente validati, misurati e/o stimati, caratterizzanti le sorgenti sismiche, i processi cinematici di rottura e gli effetti di sito.\\
+
+In questo lavoro di tesi sono stati modellizzati eventi di scenari sismici ad Ischia, in corrispondenza della stazione sismica IOCA di Casamicciola, generati da sorgenti sismogeniche con caratteristiche tettoniche e ubicazioni geografiche differenti.\\
+Gli eventi di scenario sono stati simulati utilizzando l'applicazione web XeRiS (Vaccari 2016), mentre i dati per la caratterizzazione delle sorgenti sismiche
+sono stati tratti dal Database of Individual Seismogenic Sources (DISS Working Group, 2018).\\
+Sono state prese in considerazione sei sorgenti sismiche: una situata sulla faglia di Casamicciola nella parte settentrionale dell'isola, le altre su alcune faglie appenniniche presenti nell'Italia meridionale, a una distanza di circa cento chilometri dal sito scelto.\\
+Per quanto riguarda l'attribuzione delle caratteristiche geo-sismologiche utilizzate nella simulazione in cui la sorgente è posizionata sulla faglia di
+Casamicciola, si è deciso di utilizzare quelle concernenti il terremoto di Casamicciola del 21 agosto 2017 (M=4), rilevate alla stazione sismica IOCA e
+stimate da sismologi e geofisici. Tale decisione consegue dal fatto che è necessario mantenere sotto controllo il grado di consistenza tra le previsioni
+ottenute e gli eventi sismici realmente accaduti. Non si avrà la pretesa di ottenere come risultato delle simulazioni dei livelli di scuotimento del suolo coincidenti a quelli effettivamente rilevati, ma una stima ragionevole di quanto ci si può attendere in futuro per eventi simili.\\
+Si è deciso di simulare questo terremoto specifico poiché presenta delle caratteristiche particolari (e.g. De Natale, 2018), che possono essere approfondite al fine di dare un contributo alla stesura di nuove mappe di pericolosità per l'Isola d'Ischia più realistiche rispetto a quelle adottate dalla normativa nazionale attuale.\\
+Il lavoro svolto è costituito di tre parti: nella prima sono presentate le funzionalità utilizzate dell'applicazione web XeRiS, e riportati i dati geosismologici relativi alla sorgete sismica di Casamicciola. Nella seconda parte sono presentati i risultati della simulazione con sorgente sull'isola, tabulate le faglie appenniniche e presentati i relativi scenari di scuotimento ad Ischia. Nella terza e ultima parte sono confrontati i diversi scenari di scuotimento simulati.
+
 \section{Presentazione della Web App XeRiS}
 \subsection{Definizione del modello strutturale}
 \subsection{Modellizzazione di sorgenti sismiche estese}
