Updated tesi: added image

--- a/tesi.tex
+++ b/tesi.tex
@@ -43,6 +43,13 @@ sismici di magnitudo anche superiore a 7.0, come ad esempio il terremoto
 calabro-siculo del 1908, che danneggiò gravemente le città di Reggio Calabria e Messina provocando più di novantamila morti.\\
 La mappa italiana di pericolosità sismica (PCM 28 aprile 2006) segnala ampie porzioni del territorio nazionale su cui può incidere un importante fattore di rischio.
 
+\begin{figure}[htbp]
+ \centering
+ \includegraphics[width=.5\linewidth]{Img/PericolositaSismoNazionale.png}
+ \caption{Mappa italiana di pericolosità sismica PCM 28 aprile 2006.}
+ \label{fig:PericolositaSismoNazionale1}
+\end{figure}
+
 La pericolosità sismica è associata agli effetti fisici di un sisma che possono rivelarsi potenzialmente dannosi per l'uomo e/o le sue attività, come ad
 esempio il massimo scuotimento orizzontale del suolo, solitamente espresso in PGA (Peak Ground Acceleration). Il rischio sismico, in sintesi, rappresenta
 la probabilità che l'uomo, e/o le sue attività, subiscano un livello di danno se esposti a pericolosità sismica; viene valutato in concomitanza dei fattori di
